✨ feat(tenants): list user tenants
